@@ -1,35 +1,23 @@
 # Spark
 
-* Install Docker
-* Customize `env.sh`
-* Edit `app/conf/spark-defaults.conf`:
-
-```
-spark.cassandra.connection.host <CASSANDRA_IP>
-```
-
-* Run:
-
-```
-source env.sh
-make data_preprocessing
-```
-
-## On code update
-
-When the code is updated, you need to rebuild the image:
-
-```
-make build
+```bash
+make # Compile and create the image
 make test
-make push
 ```
 
-# Dockerfiles
+## Temperature
 
-* `Dockerfile-base` describes an image with both Spark and SBT installed to compile the code and run it
-* `Dockerfile` describes an image which pulls the code and compile it
+```bash
+# "temperature" is the name of the topic. To be synchronized with Akka
+# PULLING_PERIOD_SEC is typically 2 (in seconds)
+./run.sh <CASSANDRA_HOST> <CASSANDRA_PORT> DataPreprocessing <KAFKA_HOST>:<KAFKA_PORT> temperature <PULLING_PERIOD_SEC>
+```
 
-Because we call `git clone`, we need to build the image without cache, else `git clone`
-won't be called. To avoid installing again all packages for Spark and SBT, I created
-two Dockerfiles.
+## Tweets
+
+TODO
+
+## HeapSpace error with sbt
+```bash
+export SBT_OPTS="-Xms512M -Xmx3536M -Xss1M  -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=724M"
+```
